Imports BiocGenerics instead of IRanges.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@60810 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,7 @@
 useDynLib(DECIPHER)
 
+import(BiocGenerics)
 import(Biostrings)
-import(IRanges) # for unique
 
 export(
 # functions for interacting with a database:
