--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: DECIPHER
 Type: Package
 Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.1.0
+Version: 1.1.1
 Date: 2011-10-05
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, Infrastructure, DataImport, Visualization, Microarray, QualityControl
 Description: A toolset that assist in the design of hybridization probes.
-Depends: R (>= 2.13.0), Biostrings (>= 2.16), RSQLite (>= 0.9), IRanges, stats
-Imports: Biostrings, RSQLite, IRanges, stats
-LinkingTo: Biostrings, RSQLite, IRanges, stats
+Depends: R (>= 2.13.0), BiocGenerics, Biostrings (>= 2.16), RSQLite (>= 0.9), stats
+Imports: BiocGenerics, Biostrings, RSQLite, stats
+LinkingTo: IRanges, Biostrings, RSQLite, stats
 License: GPL-3
 LazyLoad: yes
-Packaged: 2011-10-05 22:19:57 UTC; sixfoot10
