newly released features
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@63422 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,19 +1,23 @@
 useDynLib(DECIPHER)
 
-import(BiocGenerics)
 import(Biostrings)
+import(IRanges)
 
 export(
 # functions for interacting with a database:
 Add2DB, Seqs2DB, SearchDB, DB2FASTA,
 # functions for assigning an identifier:
 FormGroups, IdentifyByRank,
-# functions that can write info to a DB:
-IdLengths, IdClusters, IdConsensus, FindChimeras,
-# functions that return info:
-ConsensusSequence, DistanceMatrix, CreateChimeras,
-# functions that deal with terminal gaps:
-TerminalChar,
+# useful functions:
+IdLengths, TerminalChar,
+# functions for grouping sequences:
+DistanceMatrix, IdClusters,
+# functions for forming consensus:
+ConsensusSequence, IdConsensus,
+# function for chimeras:
+FindChimeras, CreateChimeras,
+# functions for microarrays:
+CalculateEfficiencyArray,
 # functions for viewing information:
 BrowseSequences, BrowseDB
 )
