--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: DECIPHER
 Type: Package
 Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.1.2
-Date: 2011-10-05
+Version: 1.1.3
+Date: 2012-03-03
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, Infrastructure, DataImport, Visualization, Microarray, QualityControl
 Description: A toolset that assist in the design of hybridization probes.
-Depends: R (>= 2.13.0), BiocGenerics, Biostrings (>= 2.16), RSQLite (>= 0.9), stats
-Imports: BiocGenerics, Biostrings, RSQLite, stats
-LinkingTo: IRanges, Biostrings, RSQLite, stats
+Depends: R (>= 2.13.0), Biostrings (>= 2.16), RSQLite (>= 0.9), IRanges, stats
+Imports: Biostrings, RSQLite, IRanges, stats
+LinkingTo: Biostrings, RSQLite, IRanges, stats
 License: GPL-3
-LazyLoad: yes
+LazyData: yes
