--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,22 +4,22 @@ import(Biostrings)
 import(IRanges)
 
 export(
-# functions for interacting with a database:
+# interacting with a database:
 Add2DB, Seqs2DB, SearchDB, DB2FASTA,
-# functions for assigning an identifier:
+# assigning an identifier:
 FormGroups, IdentifyByRank,
-# useful functions:
+# lengths:
 IdLengths, TerminalChar,
-# functions for grouping sequences:
+# grouping sequences:
 DistanceMatrix, IdClusters,
-# functions for forming consensus:
+# forming consensus:
 ConsensusSequence, IdConsensus, TileSeqs,
-# function for chimeras:
+# chimeras:
 FindChimeras, CreateChimeras,
-# functions for microarrays:
+# microarrays:
 CalculateEfficiencyArray,
-# functions for primers:
+# primers:
 CalculateEfficiencyPCR, DesignPrimers,
-# functions for viewing information:
+# viewing information:
 BrowseSequences, BrowseDB
 )
