Need to depend on new XVector package.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@76411 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
 useDynLib(DECIPHER)
 
-import(Biostrings)
 import(IRanges)
+import(XVector)
+import(Biostrings)
 
 export(
 # interacting with a database:
