new feature releases
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@78413 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,7 @@
 useDynLib(DECIPHER)
 
-import(IRanges)
-import(XVector)
 import(Biostrings)
+import(IRanges)
 
 export(
 # interacting with a database:
@@ -12,15 +11,17 @@ FormGroups, IdentifyByRank,
 # lengths:
 IdLengths, TerminalChar,
 # grouping sequences:
-DistanceMatrix, IdClusters,
+DistanceMatrix, IdClusters, MODELS,
 # forming consensus:
 ConsensusSequence, IdConsensus, TileSeqs,
 # chimeras:
 FindChimeras, CreateChimeras,
 # microarrays:
-CalculateEfficiencyArray,
+DesignArray, Array2Matrix, NNLS, CalculateEfficiencyArray,
 # primers:
 CalculateEfficiencyPCR, DesignPrimers,
 # viewing information:
-BrowseSequences, BrowseDB
+BrowseSequences, BrowseDB,
+# multiple alignment
+AlignSeqs, AlignProfiles
 )
