new function MaskAlignment
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@78906 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,5 @@ CalculateEfficiencyPCR, DesignPrimers,
 # viewing information:
 BrowseSequences, BrowseDB,
 # multiple alignment
-AlignSeqs, AlignProfiles
+AlignSeqs, AlignProfiles, MaskAlignment
 )
