updates for BioC release
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@80559 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ FindChimeras, CreateChimeras,
 DesignArray, Array2Matrix, NNLS, CalculateEfficiencyArray,
 # primers:
 CalculateEfficiencyPCR, DesignPrimers,
+# probes:
+CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
 BrowseSequences, BrowseDB,
 # multiple alignment
