Major update:  Alignment improvements, FASTQ import, AAStringSet support, and other enhancements.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@85820 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,10 @@
 useDynLib(DECIPHER)
 
-import(Biostrings)
+import(methods)
 import(IRanges)
+import(XVector)
+import(Biostrings)
+import(RSQLite)
 
 export(
 # interacting with a database:
@@ -25,5 +28,5 @@ CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
 BrowseSequences, BrowseDB,
 # multiple alignment
-AlignSeqs, AlignProfiles, MaskAlignment
+AlignSeqs, AlignProfiles, AlignTranslation, MaskAlignment
 )
