--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: DECIPHER
 Type: Package
 Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.9.2
-Date: 2013-09-18
+Version: 1.9.3
+Date: 2013-01-25
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, Infrastructure, DataImport, Visualization, Microarray, QualityControl
 Description: A toolset that assist in the design of hybridization probes.
-Depends: R (>= 2.13.0), Biostrings (>= 2.31.3), RSQLite (>= 0.9), IRanges (>= 1.21.10), stats, XVector (>= 0.3.2), parallel
-Imports: Biostrings, parallel, RSQLite, IRanges, stats, XVector
-LinkingTo: Biostrings, parallel, RSQLite, IRanges, stats, XVector
+Depends: R (>= 2.13.0), Biostrings (>= 2.31.9), RSQLite (>= 0.9), stats, parallel
+Imports: methods, IRanges, XVector
+LinkingTo: Biostrings, RSQLite, IRanges, XVector
 License: GPL-3
-LazyData: yes
