--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: DECIPHER
 Type: Package
 Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.11.0
-Date: 2013-03-23
+Version: 1.11.1
+Date: 2013-04-19
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, Infrastructure, DataImport, Visualization, Microarray, QualityControl
 Description: A toolset that assist in the design of hybridization probes.
 Depends: R (>= 2.13.0), Biostrings (>= 2.31.9), RSQLite (>= 0.9), stats, parallel
-Imports: methods, IRanges, XVector
-LinkingTo: Biostrings, RSQLite, IRanges, XVector
+Imports: methods, S4Vectors, IRanges, XVector
+LinkingTo: Biostrings, RSQLite, S4Vectors, IRanges, XVector
 License: GPL-3
