Major update for next release.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@101864 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ import(IRanges)
 import(XVector)
 import(Biostrings)
 import(RSQLite)
+import(DBI)
 import(parallel)
 
 export(
@@ -18,17 +19,17 @@ IdLengths, TerminalChar,
 # grouping sequences:
 DistanceMatrix, IdClusters, MODELS,
 # forming consensus:
-ConsensusSequence, IdConsensus, TileSeqs,
+ConsensusSequence, Disambiguate, IdConsensus, TileSeqs,
 # chimeras:
 FindChimeras, CreateChimeras,
 # microarrays:
 DesignArray, Array2Matrix, NNLS, CalculateEfficiencyArray,
 # primers:
-Amplify, CalculateEfficiencyPCR, DesignPrimers, MeltDNA,
+AmplifyDNA, CalculateEfficiencyPCR, DesignPrimers, DesignSignatures, DigestDNA, MeltDNA,
 # probes:
 CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
-BrowseSequences, BrowseDB,
+BrowseSequences, BrowseSeqs, BrowseDB,
 # multiple alignment
-AlignSeqs, AlignProfiles, AlignTranslation, MaskAlignment, AlignDB
+AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, PredictHEC, StaggerAlignment
 )
