--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: DECIPHER
 Type: Package
 Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.13.1
-Date: 2014-10-10
+Version: 1.13.2
+Date: 2015-04-04
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment
 Description: A toolset for deciphering and managing biological sequences.
-Depends: R (>= 2.13.0), Biostrings (>= 2.31.9), RSQLite (>= 0.9), stats, parallel
-Imports: methods, S4Vectors, IRanges, XVector
+Depends: R (>= 2.13.0), Biostrings (>= 2.35.12), RSQLite (>= 1.0.0), stats, parallel
+Imports: methods, DBI, S4Vectors, IRanges, XVector
 LinkingTo: Biostrings, RSQLite, S4Vectors, IRanges, XVector
 License: GPL-3
