Major update for next BioC release.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@108756 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,15 @@ Amplify, AmplifyDNA, CalculateEfficiencyPCR, DesignPrimers, DesignSignatures, Di
 CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
 BrowseSequences, BrowseSeqs, BrowseDB,
-# multiple alignment
-AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, PredictHEC, StaggerAlignment
+# sequence analysis:
+CorrectFrameshifts, PredictHEC,
+# multiple alignment:
+AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, StaggerAlignment,
+# synteny:
+AlignSynteny, FindSynteny
 )
+
+S3method(`[`, "Synteny")
+S3method(pairs, "Synteny")
+S3method(plot, "Synteny")
+S3method(print, "Synteny")
