--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DECIPHER
 Type: Package
 Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.15.1
-Date: 2015-04-13
+Version: 1.15.2
+Date: 2015-09-23
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
-biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment
+biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
 Description: A toolset for deciphering and managing biological sequences.
 Depends: R (>= 2.13.0), Biostrings (>= 2.35.12), RSQLite (>= 1.0.0), stats, parallel
 Imports: methods, DBI, S4Vectors, IRanges, XVector
