Minor update for next BioC release.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@109212 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,8 +30,8 @@ Amplify, AmplifyDNA, CalculateEfficiencyPCR, DesignPrimers, DesignSignatures, Di
 CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
 BrowseSequences, BrowseSeqs, BrowseDB,
-# sequence analysis:
-CorrectFrameshifts, PredictHEC,
+# sequence analysis/manipulation:
+CorrectFrameshifts, OrientNucleotides, PredictHEC,
 # multiple alignment:
 AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, StaggerAlignment,
 # synteny:
