--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: DECIPHER
 Type: Package
-Title: Database Enabled Code for Ideal Probe Hybridization Employing R
-Version: 1.17.0
-Date: 2015-10-05
+Title: Tools for curating, analyzing, and manipulating biological sequences
+Version: 1.99.0
+Date: 2016-01-24
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
