Adding ReadDendrogram and WriteDendrogram functions.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@115495 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,8 @@ Add2DB, Codec, Seqs2DB, SearchDB, DB2Seqs,
 FormGroups, IdentifyByRank,
 # lengths:
 IdLengths, TerminalChar,
-# grouping sequences:
-DistanceMatrix, IdClusters, MODELS,
+# phylogenetics:
+DistanceMatrix, IdClusters, MODELS, ReadDendrogram, WriteDendrogram,
 # forming consensus:
 ConsensusSequence, Disambiguate, IdConsensus, TileSeqs,
 # chimeras:
