Major update. Added PredictDBN.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/DECIPHER@120706 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
 BrowseSeqs, BrowseDB,
 # sequence analysis/manipulation:
-CorrectFrameshifts, OrientNucleotides, PredictHEC, TrimDNA,
+CorrectFrameshifts, OrientNucleotides, PredictDBN, PredictHEC, TrimDNA,
 # multiple alignment:
 AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, StaggerAlignment,
 # synteny:
