--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: DECIPHER
 Type: Package
 Title: Tools for curating, analyzing, and manipulating biological sequences
-Version: 2.1.6
-Date: 2016-09-03
+Version: 2.1.7
+Date: 2016-10-04
 Author: Erik Wright
 Maintainer: Erik Wright <DECIPHER@cae.wisc.edu>
 biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
 Description: A toolset for deciphering and managing biological sequences.
 Depends: R (>= 3.3.0), Biostrings (>= 2.35.12), RSQLite (>= 1.0.0), stats, parallel
 Imports: methods, DBI, S4Vectors, IRanges, XVector
-LinkingTo: Biostrings, RSQLite, S4Vectors, IRanges, XVector
+LinkingTo: Biostrings, S4Vectors, IRanges, XVector
 License: GPL-3
