--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: DECIPHER
 Type: Package
 Title: Tools for curating, analyzing, and manipulating biological sequences
-Version: 2.5.0
-Date: 2017-03-31
+Version: 2.5.1
+Date: 2017-10-20
 Author: Erik Wright
 Maintainer: Erik Wright <eswright@pitt.edu>
 biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
@@ -11,3 +11,4 @@ Depends: R (>= 3.3.0), Biostrings (>= 2.35.12), RSQLite (>= 1.1), stats, paralle
 Imports: methods, DBI, S4Vectors, IRanges, XVector
 LinkingTo: Biostrings, S4Vectors, IRanges, XVector
 License: GPL-3
+ByteCompile: true
