--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ import(RSQLite)
 import(DBI)
 import(parallel)
 
-importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb")
-importFrom("graphics", "abline", "axis", "box", "legend", "mtext", "par", "plot", "points", "rect", "segments", "strheight", "strwidth", "text")
+importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb", "as.graphicsAnnot")
+importFrom("graphics", "abline", "axis", "box", "legend", "mtext", "par", "plot", "points", "rect", "segments", "strheight", "strwidth", "text", "axTicks", "hist", "layout", "lines", "polygon")
 importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot")
 importFrom("utils", "browseURL", "data", "flush.console", "object.size", "setTxtProgressBar", "txtProgressBar")
 
@@ -36,14 +36,20 @@ CalculateEfficiencyFISH, DesignProbes,
 # viewing information:
 BrowseSeqs, BrowseDB,
 # sequence analysis/manipulation:
-CorrectFrameshifts, OrientNucleotides, PredictDBN, PredictHEC, TrimDNA,
+CorrectFrameshifts, OrientNucleotides, PredictDBN, PredictHEC, RemoveGaps, TrimDNA,
 # multiple alignment:
 AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, StaggerAlignment,
 # synteny:
-AlignSynteny, FindSynteny
+AlignSynteny, FindSynteny,
+# taxonomic classification:
+LearnTaxa, IdTaxa
 )
 
 S3method(`[`, "Synteny")
 S3method(pairs, "Synteny")
 S3method(plot, "Synteny")
 S3method(print, "Synteny")
+S3method(`[`, "Taxa")
+S3method(c, "Taxa")
+S3method(plot, "Taxa")
+S3method(print, "Taxa")
