Major updates for new release.
Committer: Erik Wright <eswright@pitt.edu>
	modified:   DESCRIPTION
	modified:   NAMESPACE
	new file:   R/AA_REDUCED.R
	modified:   R/AdjustAlignment.R
	modified:   R/AlignDB.R
	modified:   R/AlignProfiles.R
	modified:   R/AlignSeqs.R
	modified:   R/AlignSynteny.R
	modified:   R/Array2Matrix.R
	modified:   R/CalculateEfficiencyArray.R
	modified:   R/CalculateEfficiencyPCR.R
	modified:   R/CorrectFrameshifts.R
	modified:   R/CreateChimeras.R
	modified:   R/DB2Seqs.R
	modified:   R/DesignArray.R
	modified:   R/DesignPrimers.R
	modified:   R/DesignProbes.R
	modified:   R/DesignSignatures.R
	modified:   R/DigestDNA.R
	modified:   R/DistanceMatrix.R
	modified:   R/FindChimeras.R
	modified:   R/FindSynteny.R
	modified:   R/FormGroups.R
	modified:   R/IdClusters.R
	modified:   R/IdConsensus.R
	modified:   R/IdLengths.R
	modified:   R/IdTaxa.R
	modified:   R/IdentifyByRank.R
	modified:   R/LearnTaxa.R
	modified:   R/MeltDNA.R
	modified:   R/NNLS.R
	modified:   R/OrientNucleotides.R
	modified:   R/PredictDBN.R
	modified:   R/PredictHEC.R
	modified:   R/StaggerAlignment.R
	modified:   R/Taxa-class.R
	modified:   R/TileSeqs.R
	new file:   man/AA_REDUCED.Rd
	modified:   man/AlignProfiles.Rd
	modified:   man/AlignSeqs.Rd
	modified:   man/AlignTranslation.Rd
	modified:   man/DECIPHER-package.Rd
	modified:   man/DigestDNA.Rd
	modified:   man/DistanceMatrix.Rd
	modified:   man/FindChimeras.Rd
	modified:   man/FindSynteny.Rd
	modified:   man/FormGroups.Rd
	modified:   man/IdClusters.Rd
	modified:   man/IdTaxa.Rd
	modified:   man/LearnTaxa.Rd
	modified:   man/PredictDBN.Rd
	modified:   man/Taxa-class.Rd
	modified:   src/AssignIndels.c
	new file:   src/Cluster.c
	deleted:    src/ClusterNJ.c
	deleted:    src/ClusterUPGMA.c
	modified:   src/Compression.c
	modified:   src/DECIPHER.h
	modified:   src/DistanceMatrix.c
	modified:   src/EnumerateSequence.c
	modified:   src/MultiMatch.c
	modified:   src/PredictDBN.c
	modified:   src/R_init_decipher.c
	modified: 

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,9 @@ import(RSQLite)
 import(DBI)
 import(parallel)
 
-importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb", "as.graphicsAnnot")
+importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb", "as.graphicsAnnot", "col2rgb")
 importFrom("graphics", "abline", "axis", "box", "legend", "mtext", "par", "plot", "points", "rect", "segments", "strheight", "strwidth", "text", "axTicks", "hist", "layout", "lines", "polygon")
-importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot")
+importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean")
 importFrom("utils", "browseURL", "data", "flush.console", "object.size", "setTxtProgressBar", "txtProgressBar")
 
 export(
@@ -40,7 +40,7 @@ CorrectFrameshifts, OrientNucleotides, PredictDBN, PredictHEC, RemoveGaps, TrimD
 # multiple alignment:
 AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, StaggerAlignment,
 # synteny:
-AlignSynteny, FindSynteny,
+AA_REDUCED, AlignSynteny, FindSynteny,
 # taxonomic classification:
 LearnTaxa, IdTaxa
 )
