Add ImmunoOncology biocViews term

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DECIPHER
 Type: Package
 Title: Tools for curating, analyzing, and manipulating biological sequences
-Version: 2.11.0
+Version: 2.11.1
 Date: 2018-10-29
 Author: Erik Wright
 Maintainer: Erik Wright <eswright@pitt.edu>
-biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
+biocViews: ImmunoOncology, Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
 Description: A toolset for deciphering and managing biological sequences.
 Depends: R (>= 3.3.0), Biostrings (>= 2.35.12), RSQLite (>= 1.1), stats, parallel
 Imports: methods, DBI, S4Vectors, IRanges, XVector
