Update for next release
 Committer: Erik Wright <eswright@pitt.edu>
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   R/AlignTranslation.R
	modified:   R/BrowseSeqs.R
	modified:   R/DesignSignatures.R
	modified:   R/FindSynteny.R
	modified:   R/LearnTaxa.R
	modified:   R/TrimDNA.R
	modified:   man/AlignTranslation.Rd
	modified:   man/BrowseSeqs.Rd
	modified:   man/FindSynteny.Rd
	modified:   man/IdTaxa.Rd
	modified:   man/PredictDBN.Rd
	modified:   src/ChainSegments.c
	modified:   src/ClusterML.c
	modified:   src/Compression.c
	modified:   src/DECIPHER.h
	modified:   src/R_init_decipher.c
	modified:   src/VectorSums.c
	modified:   vignettes/ClassifySequences.Rnw
	modified:   vignettes/DesignPrimers.Rnw
	modified:   vignettes/DesignSignatures.Rnw

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DECIPHER
 Type: Package
 Title: Tools for curating, analyzing, and manipulating biological sequences
-Version: 2.11.2
-Date: 2019-01-21
+Version: 2.11.3
+Date: 2019-04-25
 Author: Erik Wright
 Maintainer: Erik Wright <eswright@pitt.edu>
-biocViews: ImmunoOncology, Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome
+biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome, ImmunoOncology
 Description: A toolset for deciphering and managing biological sequences.
 Depends: R (>= 3.3.0), Biostrings (>= 2.35.12), RSQLite (>= 1.1), stats, parallel
 Imports: methods, DBI, S4Vectors, IRanges, XVector
