--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ FormGroups, IdentifyByRank,
 # lengths:
 IdLengths, TerminalChar,
 # phylogenetics:
-DistanceMatrix, IdClusters, MODELS, ReadDendrogram, WriteDendrogram,
+Cophenetic, DistanceMatrix, IdClusters, MapCharacters, MODELS, ReadDendrogram, WriteDendrogram,
 # forming consensus:
 ConsensusSequence, Disambiguate, IdConsensus, TileSeqs,
 # chimeras:
