Update for next release
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AA_REDUCED.R
	modified:   R/AlignTranslation.R
	modified:   R/AmplifyDNA.R
	modified:   R/Cophenetic.R
	modified:   R/CorrectFrameshifts.R
	modified:   R/DesignPrimers.R
	new file:   R/ExtractGenes.R
	new file:   R/FindGenes.R
	new file:   R/Genes-class.R
	modified:   R/IdClusters.R
	modified:   R/IdTaxa.R
	modified:   R/LearnTaxa.R
	modified:   R/MapCharacters.R
	modified:   R/OrientNucleotides.R
	modified:   R/ReadDendrogram.R
	modified:   R/Taxa-class.R
	new file:   R/WriteGenes.R
	new file:   data/deltaHrulesRNA.RData
	new file:   data/deltaSrulesRNA.RData
	new file:   inst/extdata/Chlamydia_trachomatis_NC_000117.fas.gz
	new file:   inst/extdata/PlanctobacteriaNamedGenes.fas.gz
	modified:   man/AA_REDUCED.Rd
	modified:   man/AmplifyDNA.Rd
	modified:   man/BrowseSeqs.Rd
	modified:   man/DECIPHER-package.Rd
	new file:   man/ExtractGenes.Rd
	new file:   man/FindGenes.Rd
	new file:   man/Genes-class.Rd
	modified:   man/IdClusters.Rd
	modified:   man/IdTaxa.Rd
	modified:   man/LearnTaxa.Rd
	modified:   man/MapCharacters.Rd
	modified:   man/PredictDBN.Rd
	modified:   man/ReadDendrogram.Rd
	modified:   man/Taxa-class.Rd
	modified:   man/TrimDNA.Rd
	new file:   man/WriteGenes.Rd
	modified:   man/deltaGrules.Rd
	modified:   man/deltaHrules.Rd
	new file:   man/deltaHrulesRNA.Rd
	modified:   man/deltaSrules.Rd
	new file:   man/deltaSrulesRNA.Rd
	modified:   src/DECIPHER.h
	new file:   src/GeneFinding.c
	modified:   src/R_init_decipher.c
	modified:   src/VectorSums.c
	modified:   vignettes/ClassifySequences.Rnw
	modified:   vignettes/DECIPHERing.Rnw
	new file:   vignettes/FindingGenes.Rnw

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: DECIPHER
 Type: Package
 Title: Tools for curating, analyzing, and manipulating biological sequences
-Version: 2.17.1
-Date: 2020-05-06
+Version: 2.17.2
+Date: 2020-10-26
 Author: Erik Wright
 Maintainer: Erik Wright <eswright@pitt.edu>
-biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome, ImmunoOncology
+biocViews: Clustering, Genetics, Sequencing, DataImport, Visualization, Microarray, QualityControl, qPCR, Alignment, WholeGenome, Microbiome, ImmunoOncology, GenePrediction
 Description: A toolset for deciphering and managing biological sequences.
-Depends: R (>= 3.3.0), Biostrings (>= 2.35.12), RSQLite (>= 1.1), stats, parallel
+Depends: R (>= 3.5.0), Biostrings (>= 2.35.12), RSQLite (>= 1.1), stats, parallel
 Imports: methods, DBI, S4Vectors, IRanges, XVector
 LinkingTo: Biostrings, S4Vectors, IRanges, XVector
 License: GPL-3
