Adding NonCoding class and functions
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AlignSeqs.R
	modified:   R/BrowseSeqs.R
	modified:   R/ExtractGenes.R
	modified:   R/FindGenes.R
	new file:   R/FindNonCoding.R
	modified:   R/FindSynteny.R
	modified:   R/Genes-class.R
	modified:   R/IdClusters.R
	modified:   R/IdTaxa.R
	new file:   R/LearnNonCoding.R
	modified:   R/LearnTaxa.R
	modified:   R/MaskAlignment.R
	new file:   R/NonCoding-class.R
	modified:   R/OrientNucleotides.R
	modified:   R/PredictDBN.R
	modified:   R/TerminalChar.R
	modified:   R/WriteGenes.R
	new file:   data/NonCodingRNA_Archaea.RData
	new file:   data/NonCodingRNA_Bacteria.RData
	new file:   data/NonCodingRNA_Eukarya.RData
	new file:   inst/extdata/IhtA.fas
	modified:   man/DECIPHER-package.Rd
	modified:   man/FindGenes.Rd
	new file:   man/FindNonCoding.Rd
	modified:   man/FindSynteny.Rd
	modified:   man/Genes-class.Rd
	modified:   man/IdTaxa.Rd
	new file:   man/LearnNonCoding.Rd
	modified:   man/LearnTaxa.Rd
	modified:   man/MaskAlignment.Rd
	new file:   man/NonCoding-class.Rd
	new file:   man/NonCodingRNA.Rd
	modified:   man/PredictDBN.Rd
	modified:   src/CalculateDeltaG.c
	modified:   src/ChainSegments.c
	modified:   src/DECIPHER.h
	modified:   src/EnumerateSequence.c
	modified:   src/GeneFinding.c
	modified:   src/InformationContent.c
	modified:   src/PredictDBN.c
	modified:   src/R_init_decipher.c
	new file:   vignettes/BrowseSeqsStructureIhtA.png
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/FindingGenes.Rnw
	new file:   vignettes/FindingNonCodingRNAs.Rnw

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ import(parallel)
 
 importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb", "as.graphicsAnnot", "col2rgb")
 importFrom("graphics", "abline", "axis", "box", "legend", "mtext", "par", "plot", "points", "rect", "segments", "strheight", "strwidth", "text", "axTicks", "hist", "layout", "lines", "polygon", "locator")
-importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean", "binomial", "glm", "glm.control", "optim", "predict", "smooth.spline")
+importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean", "binomial", "glm", "glm.control", "optim", "predict", "smooth.spline", "dlnorm", "plnorm", "qlnorm")
 importFrom("utils", "browseURL", "data", "flush.console", "object.size", "setTxtProgressBar", "txtProgressBar", "packageVersion", "write.table")
 
 export(
@@ -44,7 +44,7 @@ AA_REDUCED, AlignSynteny, FindSynteny,
 # taxonomic classification:
 LearnTaxa, IdTaxa,
 # genes:
-FindGenes, ExtractGenes, WriteGenes
+FindGenes, FindNonCoding, ExtractGenes, LearnNonCoding, WriteGenes
 )
 
 S3method(`[`, "Synteny")
@@ -58,3 +58,4 @@ S3method(print, "Taxa")
 S3method(`[`, "Genes")
 S3method(`plot`, "Genes")
 S3method(`print`, "Genes")
+S3method(`print`, "NonCoding")
