Update for next release
 Committer: Erik Wright <eswright@pitt.edu>
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AdjustAlignment.R
	modified:   R/AlignDB.R
	modified:   R/AlignProfiles.R
	modified:   R/AlignSeqs.R
	modified:   R/Cophenetic.R
	modified:   R/DesignSignatures.R
	modified:   R/DetectRepeats.R
	modified:   R/DistanceMatrix.R
	modified:   R/FindGenes.R
	modified:   R/FindSynteny.R
	modified:   R/IdClusters.R
	modified:   R/IdTaxa.R
	modified:   R/PredictDBN.R
	modified:   R/RemoveGaps.R
	new file:   R/ScoreAlignment.R
	modified:   R/StaggerAlignment.R
	new file:   R/TreeLine.R
	modified:   R/utils.R
	new file:   inst/extdata/Human_huntingtin_cds.fas.gz
	new file:   inst/extdata/LongHumanProteins.fas.gz
	modified:   man/AlignDB.Rd
	modified:   man/AlignProfiles.Rd
	modified:   man/AlignSeqs.Rd
	modified:   man/AlignTranslation.Rd
	modified:   man/Cophenetic.Rd
	modified:   man/DECIPHER-package.Rd
	modified:   man/DetectRepeats.Rd
	modified:   man/DistanceMatrix.Rd
	modified:   man/FindNonCoding.Rd
	modified:   man/IdClusters.Rd
	modified:   man/IdTaxa.Rd
	modified:   man/LearnNonCoding.Rd
	modified:   man/MODELS.Rd
	modified:   man/MapCharacters.Rd
	modified:   man/MaskAlignment.Rd
	modified:   man/NonCoding-class.Rd
	modified:   man/ReadDendrogram.Rd
	modified:   man/RemoveGaps.Rd
	new file:   man/ScoreAlignment.Rd
	modified:   man/StaggerAlignment.Rd
	new file:   man/TreeLine.Rd
	modified:   man/WriteDendrogram.Rd
	modified:   src/AlignProfiles.c
	modified:   src/ChainSegments.c
	modified:   src/Cluster.c
	modified:   src/ClusterML.c
	new file:   src/ClusterMP.c
	modified:   src/ConsensusSequence.c
	modified:   src/DECIPHER.h
	modified:   src/DistanceMatrix.c
	modified:   src/R_init_decipher.c
	modified:   src/RemoveGaps.c
	modified:   src/ReplaceChars.c
	modified:   vignettes/ArtOfAlignmentInR.Rnw
	modified:   vignettes/ClassifySequences.Rnw
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/DesignM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,18 +11,18 @@ import(parallel)
 
 importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb", "as.graphicsAnnot", "col2rgb")
 importFrom("graphics", "abline", "axis", "box", "legend", "mtext", "par", "plot", "points", "rect", "segments", "strheight", "strwidth", "text", "axTicks", "hist", "layout", "lines", "polygon", "locator")
-importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean", "binomial", "glm", "glm.control", "optim", "predict", "smooth.spline", "dlnorm", "plnorm", "qlnorm", "chisq.test", "dmultinom", "ecdf", "pchisq", "qbinom")
+importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean", "binomial", "glm", "glm.control", "optim", "predict", "smooth.spline", "dlnorm", "plnorm", "qlnorm", "chisq.test", "dmultinom", "ecdf", "pchisq", "qbinom", "as.dist", "pgamma", "prcomp", "qgamma", "qnorm", "rnorm", "runif")
 importFrom("utils", "browseURL", "data", "flush.console", "object.size", "setTxtProgressBar", "txtProgressBar", "packageVersion", "write.table")
 
 export(
 # interacting with a database:
 Add2DB, Codec, Seqs2DB, SearchDB, DB2Seqs,
-# assigning an identifier:
-FormGroups, IdentifyByRank,
+# assigning group labels:
+FormGroups, IdClusters, IdentifyByRank,
 # lengths:
 IdLengths, TerminalChar,
 # phylogenetics:
-Cophenetic, DistanceMatrix, IdClusters, MapCharacters, MODELS, ReadDendrogram, WriteDendrogram,
+Cophenetic, DistanceMatrix, MapCharacters, MODELS, ReadDendrogram, TreeLine, WriteDendrogram,
 # forming consensus:
 ConsensusSequence, Disambiguate, IdConsensus, TileSeqs,
 # chimeras:
@@ -38,7 +38,7 @@ BrowseSeqs, BrowseDB,
 # sequence analysis/manipulation:
 CorrectFrameshifts, DetectRepeats, OrientNucleotides, PredictDBN, PredictHEC, RemoveGaps, TrimDNA,
 # multiple alignment:
-AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, StaggerAlignment,
+AdjustAlignment, AlignDB, AlignProfiles, AlignSeqs, AlignTranslation, MaskAlignment, ScoreAlignment, StaggerAlignment,
 # synteny:
 AA_REDUCED, AlignSynteny, FindSynteny,
 # taxonomic classification:
