New Clusterize function
 Committer: Erik Wright <eswright@pitt.edu>
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AlignProfiles.R
	new file:   R/Clusterize.R
	modified:   R/DB2Seqs.R
	modified:   R/DistanceMatrix.R
	deleted:    R/IdClusters.R
	modified:   R/IdLengths.R
	modified:   R/SearchDB.R
	new file:   man/Clusterize.Rd
	modified:   man/DB2Seqs.Rd
	modified:   man/DECIPHER-package.Rd
	modified:   man/DistanceMatrix.Rd
	deleted:    man/IdClusters.Rd
	modified:   man/IdLengths.Rd
	modified:   src/AlignProfiles.c
	modified:   src/DECIPHER.h
	modified:   src/DistanceMatrix.c
	modified:   src/EnumerateSequence.c
	modified:   src/MultiMatch.c
	new file:   src/PairwiseAlignment.c
	modified:   src/R_init_decipher.c
	new file:   src/SphericalKmeans.c
	new file:   vignettes/ClusteringSequences.Rnw
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/DesignPrimers.Rnw
	modified:   vignettes/DesignSignatures.Rnw
	modified:   vignettes/FindChimeras.Rnw
	modified:   vignettes/FindingGenes.Rnw

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,14 +11,14 @@ import(parallel)
 
 importFrom("grDevices", "colorRampPalette", "colors", "dev.flush", "dev.hold", "dev.size", "rainbow", "rgb", "as.graphicsAnnot", "col2rgb")
 importFrom("graphics", "abline", "axis", "box", "legend", "mtext", "par", "plot", "points", "rect", "segments", "strheight", "strwidth", "text", "axTicks", "hist", "layout", "lines", "polygon", "locator")
-importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean", "binomial", "glm", "glm.control", "optim", "predict", "smooth.spline", "dlnorm", "plnorm", "qlnorm", "chisq.test", "dmultinom", "ecdf", "pchisq", "qbinom", "as.dist", "pgamma", "prcomp", "qgamma", "qnorm", "rnorm", "runif")
+importFrom("stats", "dendrapply", "dist", "is.leaf", "nlminb", "optimize", "order.dendrogram", "pbinom", "reorder", "setNames", "step", "uniroot", "weighted.mean", "binomial", "glm", "glm.control", "optim", "predict", "smooth.spline", "dlnorm", "plnorm", "qlnorm", "chisq.test", "dmultinom", "ecdf", "pchisq", "qbinom", "as.dist", "pgamma", "prcomp", "qgamma", "qnorm", "rnorm", "runif", "kmeans")
 importFrom("utils", "browseURL", "data", "flush.console", "object.size", "setTxtProgressBar", "txtProgressBar", "packageVersion", "write.table")
 
 export(
 # interacting with a database:
 Add2DB, Codec, Seqs2DB, SearchDB, DB2Seqs,
 # assigning group labels:
-FormGroups, IdClusters, IdentifyByRank,
+Clusterize, FormGroups, IdentifyByRank,
 # lengths:
 IdLengths, TerminalChar,
 # phylogenetics:
