--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install package
         run: |
           install.packages("pak")
+          pak::pak("r-lib/pkgdepends")
           pak::local_install()
         shell: Rscript {0}
 
